re PR middle-end/21964 (broken tail call at -O2 or more)

PR middle-end/21964
	* stmt.c (tail_recursion_args): Insert a call to emit_queue.

From-SVN: r102854